--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.0.0",
+    "popper.js": "^1.16.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^6.8.1",
