--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.0.0",
     "react": "^16.14.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^16.14.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
