--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "swiper": "^9.0.5",
     "tailwindcss": "^3.2.6",
     "web-vitals": "^2.1.4"
   },
