--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.14.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^16.14.0",
+    "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
